--- a/Documentation/Changelog
+++ b/Documentation/Changelog
@@ -1,6 +1,11 @@
 
 CHANGELOG
 
+* 2014/07/21:
+
+    - Revised. Working on Python 3.4.1 and Pillow 2.5.1.
+      No changes needed.
+
 * 2013/07/31:
 
     - Emit the pixels with premultiplied alpha.
